// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailSignupModal component renders correctly 1`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-form-intro-view",
      }
    }
    className=""
    closeIconDataLocator="email_signup_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={false}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <LoadableComponent
      buttonConfig={Object {}}
      className=""
      closeModal={[Function]}
      formType="email_signup"
      formViewConfig={Object {}}
      isEmailValid={false}
      isModalOpen={false}
      reset={[Function]}
      subscription={
        Object {
          "success": false,
        }
      }
      trackSubscriptionSuccess={[Function]}
    />
  </Styled(Modal)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 1`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-form-intro-view",
      }
    }
    className=""
    closeIconDataLocator="email_signup_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={true}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <LoadableComponent
      buttonConfig={Object {}}
      className=""
      closeModal={[Function]}
      formType="email_signup"
      formViewConfig={Object {}}
      isEmailValid="valid"
      isModalOpen={true}
      isSubscriptionValid={
        Object {
          "success": false,
        }
      }
      reset={[Function]}
      subscription={Object {}}
      trackSubscriptionSuccess={[Function]}
    />
  </Styled(Modal)>
</Fragment>
`;

exports[`EmailSignupModal component renders correctly when button is clicked and show confirmation view 1`] = `
<Fragment>
  <Styled(Modal)
    aria={
      Object {
        "describedby": "sign-up-modal-confirm-view",
      }
    }
    className=""
    closeIconDataLocator="thank_you_modal_close_btn"
    colSet={
      Object {
        "large": 8,
        "medium": 6,
        "small": 6,
      }
    }
    contentLabel="undefined undefined"
    contentRef={[Function]}
    heightConfig={
      Object {
        "height": "645px",
        "maxHeight": "645px",
        "minHeight": "500px",
      }
    }
    isOpen={true}
    noPadding={true}
    onRequestClose={[Function]}
    overlayClassName="TCPModal__Overlay"
    widthConfig={
      Object {
        "large": "851px",
        "medium": "458px",
        "small": "100%",
      }
    }
  >
    <LoadableComponent
      buttonConfig={Object {}}
      className=""
      closeModal={[Function]}
      formType="email_signup"
      formViewConfig={Object {}}
      isEmailValid="invalid"
      isModalOpen={true}
      reset={[Function]}
      subscription={
        Object {
          "success": true,
        }
      }
      trackSubscriptionSuccess={[Function]}
    />
  </Styled(Modal)>
</Fragment>
`;
